--- a/TmapOverview_Main.Rmd
+++ b/TmapOverview_Main.Rmd
@@ -16,7 +16,7 @@ library(tidyverse)
 library(sf)
 library(tmap)
 library(leaflet)
-library(mapview)
+library(raster)
 ```
 
 ## Load spatial background data
@@ -32,13 +32,22 @@ aktog_34N <- st_transform(aktog, crs = st_crs(features))
 aktog_ppap <- st_crop(aktog_34N,e)
 aktog_34Nsm <- st_simplify(st_crop(aktog_34N,e), dTolerance = 150)
 
-# OSM Greek data
-places <- st_read("data/Greece/places.shp")
+# OSM Greek data -ENCODING IS AN ISSUE
+places <- st_read("data/Greece/places.shp", options = "ENCODING=UTF8")
+library(rgdal)
+places <- rgdal::readOGR("data/Greece/places.shp", encoding="1253")
+head(places)
+str_encode(places$name, from = "UTF-8", to = "UTF-8")
 roads <- st_read("data/Greece/roads.shp")
 waterways <- st_read("data/Greece/waterways.shp")
 natural <- st_read("data/Greece/natural.shp")
 points <- st_read("data/Greece/points.shp")
 natural$geometry
+
+places <- to34N(places)
+places$name
+places %>% 
+  filter(population>10000)
 
 # Get elevation data from SRTM
 # elev_gr <- getData("SRTM", lon = 22.6, lat = 38)
@@ -94,14 +103,16 @@ st_crs(bbb) <- 32634
 box <- st_as_sf(as(ee, "SpatialPolygons"))
 st_crs(box) <- 32634
 
-plot(elev, main = "2020 PPAP study area"); plot(bbb$geometry, add = TRUE); plot(box$geometry, border = "red", add =TRUE)
+plot(elev, main = "2020 PPAP study area"); plot(bbb$geometry, add = TRUE); plot(box$geometry, border = "red", add =TRUE); plot(places$geometry, add =TRUE)
+
+head(places)
 
 ```
 
 
 ## Tmap
 ```{r study-area-BW}
-tm_shape(el)+
+overview <- tm_shape(el)+
   tm_raster(palette = "Greys", 
             title = "Elevation", 
             style = "pretty")+
@@ -122,6 +133,12 @@ tm_shape(el)+
   tm_layout(main.title = "Perachora Study Area",
           #  bg.color = "lightblue",
             inner.margins = c(0, 0, 0, 0))
+overview
+
+# Print to file
+pdf("figures/Figure01.pdf", colormodel = "gray")
+overview
+dev.off()
 ```
 
 
@@ -134,7 +151,7 @@ units$Visibility <- factor(units$Visibility,
                                       "80-100%"))
 #units$Vis <- as.numeric(units$Visibility)
 #units$Visibility <- as.character(units$Visibility)
-tm_shape(units, 
+visibility <- tm_shape(units, 
          bbox = st_bbox(units), 
          unit = "m") + 
    tm_polygons(col = "Visibility", 
@@ -157,11 +174,13 @@ tm_shape(units,
            # bg.color = "lightblue")
 
 ```
+
+In the next chunk we visualise the daily progress and activity areas
 ```{r progress-days}
 library(lubridate)
 units$Date <- as_date(units$createdAtGMT)
          
-tm_shape(units, 
+daily <- tm_shape(units, 
          bbox = st_bbox(units), 
          unit = "m") + 
    tm_polygons(col = "Date", 
@@ -180,6 +199,8 @@ tm_shape(units,
   # position = c("left", "bottom")) +
   #tm_layout(title = "PPAP 2020")
            # bg.color = "lightblue")
+
+tmap_arrange(visibility,daily)  
 ```
 
 ```{r survey-densities-features results}
@@ -229,7 +250,7 @@ units <- units %>%
     MostRecentlyComputedAncient > 0 ~ log(MostRecentlyComputedAncient))) 
 
 # plot it
-tm_shape(units, 
+density_log <- tm_shape(units, 
          bbox = st_bbox(units), 
          unit = "m") + 
    tm_polygons(col="AncientDensityLog", 
@@ -250,10 +271,10 @@ tm_shape(units,
   # tm_credits("Sobotkova 2021",
   # position = c("left", "bottom")) +
   # tm_layout(title = "Density of ancient artefacts")
-
 ```
+
 ```{r results-features}
-tm_shape(units, bbox = st_bbox(units), unit = "m") + 
+features <- tm_shape(units, bbox = st_bbox(units), unit = "m") + 
   tm_polygons(col="cornsilk2", border.alpha = 0)+
   tm_shape(features) + 
   tm_symbols(shape = 6, col="#666666", size = 0.2) +
@@ -264,6 +285,7 @@ tm_shape(units, bbox = st_bbox(units), unit = "m") +
   tm_scale_bar(position = c("right", "bottom"), breaks = c(0,100,200), text.size = 0.75) + 
   #tm_credits("Sobotkova 2020", position = c("right", "bottom"), size = 0.8) +
   tm_layout(title = "Registered standing features") 
+features
 
 ```
 
@@ -307,9 +329,60 @@ library(raster)
 units$elev <- raster::extract(elev, st_centroid(units))
 
 summary(units$elev)
-hist(el_ssm); hist(units$elev, t , add = TRUE)
+hist(el_ssm, 
+     xlab = "Elevation (msl)", 
+     ylab = "Count",
+     breaks = 25,
+     main = "Elevation profile of Perachora study area and survey units (pink)"); 
+hist(units$elev, col = rgb(1,0,0.2, 0.6), add = TRUE)
 
-SU_elev <- zonal(elev, rasterize(units, elev, class = "SUID"), fun = "max")
+SU_elev <- zonal(elev, rasterize(units, elev, class = "SUID"), fun = "mean")
 SU_elev
+
+hist(el_ssm, 
+     xlab = "Elevation (msl)", 
+     ylab = "Count",
+     breaks = 25,
+     main = "Elevation profile of Perachora study area and survey units (pink)"); 
+hist(SU_elev, col = rgb(1,0,0.2, 0.6), add = TRUE)
+```
+
+# Adding in pottery
+
+```{r pottery}
+pots <- read_csv("data/Perachora-pottery.csv")
+dim(pots)
+pots <- pots %>% 
+  select(`FABRIC LEVIGATION: count and weigh by group, list number of handles, bases, rims, and body shards under #. Coarse#`, 'Med#', 'Fine#') %>% rename(Coarse = `FABRIC LEVIGATION: count and weigh by group, list number of handles, bases, rims, and body shards under #. Coarse#`) %>% 
+  mutate(CoarseCount = gsub("[A-Za-z]", "", Coarse) )
+
+library(tidytext)
+library(stringr)
+
+pots$CoarseCount
+pots %>%
+  mutate(Ct = str_split(CoarseCount, " , ", n = 4)) %>% mutate(CtSUM=sum(as.numeric(unlist(Ct)))) 
+  
+
+pots %>% 
+  separate(CoarseCount, into = c("One", "Two", "Three", "Four"), sep = " , *") %>% 
+  glimpse()
+
+pots %>% 
+  mutate(new = lapply(CoarseCount, str_split(., " ,  "))) %>% 
+  glimpse()
+
+pots %>% 
+  mutate(new = sum(str_detect(unlist(CoarseCount), ",") + 1)) %>% 
+  glimpse()
+
+
+pots %>% 
+  select(CoarseCount) %>% 
+  mutate(new = str_split(CoarseCount, " , " ),
+         newer = sum(as.numeric(unlist(new))))
+
+  
+
 ```
 
